Complete index.html content and style.css styling Organize the code for readability Add responsiveness to website

--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
         <div class="information-cards">
             <div class="cards">
                 <img class="cards-img" src="Images/img2.png">
-                <p class="subtext">This is some subtext under an illustration or image.</p>
+                <p class="subtext">A cozy indoor photo of the Smiths on Christmas morning. They are gathered around a beautifully decorated Christmas tree, opening presents. </p>
             </div>
             <div class="cards">
                 <img class="cards-img" src="Images/img1.png">
-                <p class="subtext">This is some subtext under an illustration or image.</p>
+                <p class="subtext">The Smith family captured in a winter wonderland scene, with snow-covered trees in the background.</p>
             </div>
             <div class="cards">
                 <img class="cards-img" src="Images/img3.png">
-                <p class="subtext">This is some subtext under an illustration or image.</p>
+                <p class="subtext">An elegant outdoor family portrait of the Smiths. They are standing together in a snowy park, with a serene, snowy landscape around them.</p>
             </div>
             <div class="cards">
                 <img class="cards-img" src="Images/img4.png">
-                <p class="subtext">This is some subtext under an illustration or image.</p>
+                <p class="subtext">A festive outdoor photo of the Smiths at a Christmas tree farm, surrounded by rows of snow-dusted pine trees. </p>
             </div>
         </div>
     </div>
@@ -62,25 +62,25 @@
     <!-- Quote Section -->
     <div class="quote">
         <p class="quote-text">
-            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it look nice.
+            "Every thread counts in this grand tapestry of life, every color adds depth, and every pattern tells a story. The darkest nights produce the brightest stars, and it's in those challenging times you find your true strength. Embrace each day with gratitude and a spirit willing to soar. Like resilient flowers pushing through snow to bloom, you too can rise above any obstacle. Believe in yourselves, for within each of you lies an unstoppable force of courage and love. And no matter how far you go or how high you climb, you'll always have a home in my heart."
         </p>
-        <p class="quote-author">-Thor, God of Thunder</p>
+        <span class="quote-author">-Great Grandma Smith</span>
     </div>
 
     <!-- Sign up Section-->
     <div class="sign-up">
         <div class="call-to-action">
-            <div class="call-to-action-text">
-              <h3>Call to action! It's Time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
+            <div class="call-to-action-container">
+              <span class="call-to-action-header">Join the Adventure with the Smiths!</span>
+                <span class="call-to-action-text">Sign up now and bring the joy of the Smiths into your inbox!</span>
             </div>
-            <button>Sign up</button>
+            <button class="sign-up-button">Sign up</button>
         </div>
     </div>
 
     <!-- Footer Section-->
     <div class="footer">
-        <h4>Copyright The Odin Project 2021</h4>
+        <span class="footer-text">Copyright © The Smith Project 2023</span>
     </div>
 </body>
 </html>
